@@ -4504,21 +4504,6 @@ For example: &quot;Work&quot; or &quot;Personal&quot;</property>
 		  <property name="focus_on_click">True</property>
 		</widget>
 	      </child>
-
-	      <child>
-		<widget class="GtkButton" id="cmdAccountAble">
-		  <property name="width_request">89</property>
-		  <property name="height_request">36</property>
-		  <property name="visible">True</property>
-		  <property name="sensitive">False</property>
-		  <property name="can_default">True</property>
-		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">E_nable</property>
-		  <property name="use_underline">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		</widget>
-	      </child>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
